syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "ErrorHeader";
option objc_class_prefix = "HLW";

package com.example;

service ErrorHeaderService {
  rpc sendWithError (ErrorHeaderRequest) returns (ErrorHeaderReply) {}
  rpc sendOk (ErrorHeaderRequest) returns (ErrorHeaderReply) {}
}

message ErrorHeaderRequest {
  string name = 1;
}

message ErrorHeaderReply {
  string message = 1;
}

message GenericException {
  string dataField = 1;
  string cause = 2;
  string message = 3;
  string serializedException = 4;
}
